--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,9 @@
-<h1>Hello World</h1>
+{% extends "base.html" %}
+{% block title %}Flasky{% endblock %}
+{% block content %}
+<div class="container">
+ <div class="page-header">
+ <h1>Hello Flasky!</h1>
+ </div>
+</div>
+{% endblock %}
