feature: add flask-moment to manage datetimes on templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 {% extends "bootstrap/base.html" %}
 
 {% block head %}
-  {{ super() }}
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-  <link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}" type="image/x-icon">
+{{ super() }}
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}" type="image/x-icon">
 {% endblock %}
 
-  
+
 {% block title %}Flasky{% endblock %}
 
 
@@ -34,4 +34,10 @@
 <div class="container">
   {% block page_content %}{% endblock %}
 </div>
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{% endblock %}
+
 {% endblock %}
