--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 <div class="container">
   <div class="page-header">
     <h1>Hello Flasky!</h1>
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
   </div>
 </div>
 {% endblock %}
