--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Flasky{% endblock %}
-{% block content %}
-<div class="container">
-  <div class="page-header">
-    <h1>Hello Flasky!</h1>
-    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
-    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
-  </div>
+
+{% block page_content %}
+<div class="page-header">
+  <h1>Hello, {% if name %}{{ name }}{% else %}Strange{% endif %}!</h1>
 </div>
+{{ wtf.quick_form(form) }}
 {% endblock %}
